fixed slight book size error on mobile screens

--- a/app/assets/stylesheets/pages/_books.scss
+++ b/app/assets/stylesheets/pages/_books.scss
@@ -18,7 +18,7 @@
   flex-direction: column;
   align-items: center;
   text-align: center;
-  padding: 2em 0;
+  padding: 3em 0;
 }
 
 .book-title-2 {
@@ -44,14 +44,14 @@
 
 .book-1-img {
   width: 50%;
-  height: 30vh;
+  height: 36vh;
   background: image-url('book_img_1.jpg');
   background-size: cover;
   background-position: center;
 }
 
 .book-2-img {
-  width: 50%;
+  width: 40%;
   height: 30vh;
   background: image-url('book_img_2.jpg');
   background-size: cover;
@@ -100,7 +100,7 @@
   }
 
   .book-3-img {
-    width: 24%;
+    width: 20%;
     height: 40vh;
   }
 }
